k8s/nvidia-container-toolkit.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nvidia-container-toolkit
  namespace: default
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: nvidia-container-toolkit
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nvidia-container-toolkit
    spec:
      containers:
        - command:
            - sh
            - -ec
            - /cuda-samples/sample && exec sleep inf
          image: nvcr.io/nvidia/k8s/cuda-sample:devicequery
          name: nvidia-cuda-sample
      enableServiceLinks: false
      hostNetwork: true
      hostPID: true
      nodeSelector:
        kubernetes.io/os: linux
      #runtimeClassName: nvidia
      priorityClassName: system-node-critical
      tolerations:
        - operator: Exists
      volumes:
        - hostPath:
            path: /
            type: Directory
          name: host
